--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto (3492342394732)</li>
+    <li>New York City (2)</li>
   </ol>
 
 </body>
