--- a/cities.html
+++ b/cities.html
@@ -31,6 +31,7 @@
     <li>Sao Paulo (5472)</li>
     <li>SSSao Paulo (5472)</li>
     <li>New York City (5)</li>
+    <li>Boston (521)</li>
   </ol>
 
 </body>
